--- a/server/package.json
+++ b/server/package.json
@@ -21,6 +21,7 @@
     "express-session": "^1.18.2",
     "express-validator": "^7.2.1",
     "google-auth-library": "^10.3.0",
+    "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.16.0",
     "mongoose": "^8.13.2",
